--- a/.gitignore
+++ b/.gitignore
@@ -224,7 +224,7 @@ test.py
 # Ignore everything in the piper_tts directory
 /piper_tts/*
 # But don't ignore the voices folder
-!/piper_tts/voices/
+!/piper_tts/voices/default_en_1
 backup/
 chatgpt/
 history_*
